some word without proffesional speaking

--- a/index.html
+++ b/index.html
@@ -1,4 +1,1 @@
-We are now making project to pudh on git hub accounts
-come on please and learn
-work hand in hand
-be competent
+mind your business please
