We are ready to create an git project

--- a/index.html
+++ b/index.html
@@ -1,1 +1,3 @@
-mind your business please
+This is the first file of students of IDBK
+We are all make the same folder(project or repository)
+called L3-SOD
