--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 This is the first file of students of IDBK
-We are all make the same folder(project or repository)
+We are all make the same  repository
 called L3-SOD
